feat: rewrite structure spawning and loot generation