@@ -7,7 +7,8 @@ import org.bukkit.block.Chest;
 import org.bukkit.command.*;
 import org.bukkit.entity.Player;
 
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class StructureCommand implements CommandExecutor, TabCompleter {
 
@@ -22,7 +23,7 @@ public class StructureCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
         if (args.length == 0) {
-            sender.sendMessage("§5[Structure] §f/structure <place|list|tag|checktag>");
+            sender.sendMessage("§5[Structure] §f/structure <place|list|tag|checktag|stats|clear>");
             return true;
         }
 
@@ -37,7 +38,6 @@ public class StructureCommand implements CommandExecutor, TabCompleter {
                     return true;
                 }
 
-                // Використовуємо Populator для розміщення
                 if (structurePopulator.placeStructureManually(args[1], p.getLocation())) {
                     sender.sendMessage("§aСтруктуру розміщено!");
                 } else {
@@ -46,7 +46,6 @@ public class StructureCommand implements CommandExecutor, TabCompleter {
             }
             case "list" -> {
                 sender.sendMessage("§6=== Структури ===");
-                // Беремо список ID з Populator
                 structurePopulator.getStructureIds().forEach(id ->
                         sender.sendMessage("§e• " + id));
             }
@@ -61,7 +60,6 @@ public class StructureCommand implements CommandExecutor, TabCompleter {
                 }
                 Block block = p.getTargetBlockExact(6);
                 if (block != null && block.getState() instanceof Chest chest) {
-                    // Використовуємо LootService для встановлення тегу
                     lootService.setChestTag(chest, args[1]);
                     sender.sendMessage("§aТег встановлено: §e" + args[1]);
                 } else {
@@ -75,7 +73,6 @@ public class StructureCommand implements CommandExecutor, TabCompleter {
                 }
                 Block block = p.getTargetBlockExact(6);
                 if (block != null && block.getState() instanceof Chest chest) {
-                    // Використовуємо LootService для читання тегу
                     String tag = lootService.getChestTag(chest);
                     if (tag != null) {
                         sender.sendMessage("§aТег: §e" + tag);
@@ -86,6 +83,43 @@ public class StructureCommand implements CommandExecutor, TabCompleter {
                     sender.sendMessage("§cДивіться на скриню!");
                 }
             }
+            // === НОВІ КОМАНДИ ===
+            case "stats" -> {
+                Map<String, Integer> spawnCounts = structurePopulator.getSpawnCounts();
+
+                if (spawnCounts.isEmpty()) {
+                    sender.sendMessage("§eЖодна структура ще не заспавнилась.");
+                    return true;
+                }
+
+                sender.sendMessage("§6=== Статистика спавнів ===");
+                spawnCounts.forEach((id, count) ->
+                        sender.sendMessage("§f  " + id + ": §e" + count + " разів")
+                );
+
+                int total = spawnCounts.values().stream().mapToInt(Integer::intValue).sum();
+                sender.sendMessage("§aВсього структур: §e" + total);
+            }
+            case "clear" -> {
+                if (args.length < 2) {
+                    sender.sendMessage("§c/structure clear <id|all>");
+                    return true;
+                }
+
+                String target = args[1].toLowerCase();
+
+                if (target.equals("all")) {
+                    structurePopulator.getStructureIds().forEach(structurePopulator::clearSpawnHistory);
+                    sender.sendMessage("§aІсторію спавнів очищено для всіх структур.");
+                } else {
+                    if (structurePopulator.getStructureIds().contains(target)) {
+                        structurePopulator.clearSpawnHistory(target);
+                        sender.sendMessage("§aІсторію спавнів очищено для '" + target + "'.");
+                    } else {
+                        sender.sendMessage("§cСтруктуру '" + target + "' не знайдено.");
+                    }
+                }
+            }
             default -> sender.sendMessage("§cНевідома підкоманда.");
         }
         return true;
@@ -94,12 +128,28 @@ public class StructureCommand implements CommandExecutor, TabCompleter {
     @Override
     public List<String> onTabComplete(CommandSender sender, Command cmd, String alias, String[] args) {
         if (args.length == 1) {
-            return List.of("place", "list", "tag", "checktag");
+            return Arrays.asList("place", "list", "tag", "checktag", "stats", "clear")
+                    .stream()
+                    .filter(s -> s.startsWith(args[0].toLowerCase()))
+                    .collect(Collectors.toList());
         }
-        if (args.length == 2 && args[0].equalsIgnoreCase("place")) {
-            // Динамічний список структур
-            return structurePopulator.getStructureIds().stream().toList();
+
+        if (args.length == 2) {
+            if (args[0].equalsIgnoreCase("place")) {
+                return structurePopulator.getStructureIds().stream()
+                        .filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase()))
+                        .collect(Collectors.toList());
+            }
+
+            if (args[0].equalsIgnoreCase("clear")) {
+                List<String> options = new ArrayList<>(structurePopulator.getStructureIds());
+                options.add("all");
+                return options.stream()
+                        .filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase()))
+                        .collect(Collectors.toList());
+            }
         }
+
         return List.of();
     }
 }
